--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,16 @@
 // Начните писать стили здесь
+@import "global/fonts";
+@import "global/global";
+@import "global/variables";
+@import "blocks/page";
+@import "blocks/main-header";
+@import "blocks/main-navigation";
+@import "blocks/main-container";
+@import "blocks/intro";
+@import "blocks/advantages";
+@import "blocks/search";
+@import "blocks/location";
+@import "blocks/main-footer";
+@import "blocks/social";
+@import "blocks/copyright";
+@import "blocks/button";
