--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,12 +1,17 @@
 .intro__wrapper {
-  width: 282px;
+  width: 284px;
 }
 
 .intro__logo {
   display: block;
   padding-top: 90px;
   padding-bottom: 85px;
-  background: #3f5e72 url("../img/back-mobile.jpg");
+  background: #3f5e72 url("../img/back-mobile.jpg") no-repeat top;
+}
+
+.intro__logo--short {
+  padding: 52px 45px 67px;
+  background: #3f5e72 url("../img/catalog/back-desktop.jpg") no-repeat top;
 }
 
 .intro__slogan {
