--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -7,6 +7,5 @@
   text-decoration: none;
   border: none;
   color: #ffffff;
-  background-color: #81b3d2;
-
+  background-color: $primary-back-color;
 }
