--- a/source/sass/blocks/main-navigation.scss
+++ b/source/sass/blocks/main-navigation.scss
@@ -1,6 +1,3 @@
-.main-navigation {
-
-}
 .main-navigation__toggle {
   position: absolute;
   top: 17px;
@@ -9,7 +6,7 @@
   height: 23px;
   padding: 0;
   border: none;
-  background-color: #81b3d2;
+  background-color: $primary-back-color;
 }
 
 .main-navigation__icon {
@@ -21,7 +18,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  background-color: #81b3d2;
+  background-color: $primary-back-color;
 }
 
 .main-navigation__link {
