--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,8 +1,11 @@
 // Начните писать стили здесь
+@import "global/variables";
+@import "global/mixins";
 @import "global/fonts";
 @import "global/global";
-@import "global/variables";
 @import "blocks/page";
+@import "blocks/heading";
+@import "blocks/button";
 @import "blocks/main-header";
 @import "blocks/main-navigation";
 @import "blocks/main-container";
@@ -13,4 +16,9 @@
 @import "blocks/main-footer";
 @import "blocks/social";
 @import "blocks/copyright";
-@import "blocks/button";
+@import "blocks/content";
+@import "blocks/gallery";
+@import "blocks/video";
+@import "blocks/field-group";
+@import "blocks/reviews";
+@import "blocks/modal";
