--- a/source/sass/blocks/main-navigation.scss
+++ b/source/sass/blocks/main-navigation.scss
@@ -10,7 +10,7 @@
 }
 
 .main-navigation__icon {
-  fill: #ffffff;
+  fill: $white-color;
 }
 
 .main-navigation__list {
@@ -27,5 +27,5 @@
   font-weight: 700;
   text-transform: uppercase;
   text-decoration: none;
-  color: #ffffff;
+  color: $white-color;
 }
