--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -6,6 +6,6 @@
   text-transform: uppercase;
   text-decoration: none;
   border: none;
-  color: #ffffff;
+  color: $white-color;
   background-color: $primary-back-color;
 }
