--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -2,7 +2,7 @@
   display: block;
   padding-bottom: 25px;
   text-decoration: none;
-  color: #000000;
+  color: $black-color;
 }
 
 .gallery__image {
@@ -34,6 +34,6 @@
 }
 
 .gallery__button-icon {
-  fill: #000000;
+  fill: $black-color;
   opacity: 0.3;
 }
