--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -11,7 +11,7 @@
   line-height: 26px;
   text-transform: uppercase;
   text-decoration: none;
-  color: #000000;
+  color: $black-color;
 }
 
 .main-footer__social {
