--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -18,7 +18,7 @@
   padding-bottom: 28px;
   text-align: center;
   text-transform: uppercase;
-  color: #333333;
+  color: $secondary-color;
 }
 
 .modal__button {
