--- a/source/sass/blocks/search.scss
+++ b/source/sass/blocks/search.scss
@@ -18,7 +18,7 @@
   margin: 0;
   padding-bottom: 32px;
   text-transform: uppercase;
-  color: #333333;
+  color: $secondary-color;
 }
 
 .search__button {
