--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,2 +1,7 @@
 $primary-back-color: #81b3d2;
 $input-back-color: #f2f2f2;
+$white-color: #ffffff;
+$black-color: #000000;
+$advantages-color: #eeeeee;
+$secondary-color: #333333;
+$intro-back-color: #3f5e72;
