--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,7 +1,10 @@
 .main-header {
+  display: flex;
+  flex-direction: column;
   background-color: $white-color;
 }
 
 .main-header__logo {
   width: 100%;
+  height: 96px;
 }
