--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -6,6 +6,7 @@
   text-transform: uppercase;
   text-decoration: none;
   border: none;
+  box-sizing: border-box;
   color: $white-color;
   background-color: $primary-back-color;
 }
