--- a/source/sass/blocks/content.scss
+++ b/source/sass/blocks/content.scss
@@ -1,5 +1,17 @@
 .content__wrapper {
   width: 280px;
+  padding: 0 20px;
+  margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    width: 648px;
+    padding: 0 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1200px;
+    padding: 0;
+  }
 }
 
 .content__title {
@@ -11,13 +23,32 @@
 
 .content__description {
   margin: 0;
-  padding-bottom: 68px;
+  padding-bottom: 20px;
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 95px 63px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 370px 65px;
+  }
 }
 
 .content__list {
   margin: 0;
   padding: 0;
   list-style: none;
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 324px 324px;
+    grid-template-rows: 480px 347px 347px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: repeat(3, 400px);
+    grid-template-rows: 400px 267px;
+  }
 }
