--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -1,8 +1,23 @@
+.gallery__item--first {
+  @media (min-width: $tablet-width) {
+    grid-column: 1/3;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1/4;
+  }
+}
+
 .gallery__link {
   display: block;
   padding-bottom: 25px;
   text-decoration: none;
   color: $black-color;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+    height: 100%;
+  }
 }
 
 .gallery__image {
