--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -1,7 +1,19 @@
 .video__wrapper {
   position: relative;
-  width: 284px;
+  width: 280px;
+  padding: 17px 20px 0;
+  margin: 0 auto;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    width: 648px;
+    padding: 58px 60px 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 800px;
+    padding: 62px 200px 0;
+  }
 }
 
 .video__title {
