--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,5 +1,17 @@
 .reviews__wrapper {
   width: 280px;
+  padding: 0 20px;
+  margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    width: 648px;
+    padding: 0 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 960px;
+    padding: 0 120px;
+  }
 }
 
 .reviews__title {
@@ -14,12 +26,39 @@
   padding-bottom: 28px;
   text-transform: uppercase;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 107px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 263px;
+  }
+}
+
+.reviews__form {
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 324px 324px;
+    padding-top: 102px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 493px 466px;
+    padding-top: 67px;
+  }
 }
 
 .reviews__field-group {
   margin: 0;
   padding: 0;
   padding-bottom: 24px;
+
+  &--row {
+    @media (min-width: $tablet-width) {
+      grid-column: 1/3;
+    }
+  }
 }
 
 .reviews__button {
