--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,7 @@
 @import "global/mixins";
 @import "global/fonts";
 @import "global/global";
+@import "global/container";
 @import "blocks/page";
 @import "blocks/heading";
 @import "blocks/button";
