--- a/source/sass/blocks/main-navigation.scss
+++ b/source/sass/blocks/main-navigation.scss
@@ -1,3 +1,7 @@
+.main-navigation__wrapper {
+  background-color: $primary-back-color;
+}
+
 .main-navigation__toggle {
   width: 23px;
   height: 23px;
@@ -18,14 +22,6 @@
   list-style: none;
   margin: 0;
   padding: 0;
-
-  @media (min-width: $tablet-width) {
-    width: 768px;
-  }
-
-  @media (min-width: $desktop-width) {
-    width: 1200px;
-  }
 }
 
 .main-navigation__item {
@@ -33,6 +29,9 @@
 }
 
 .main-navigation__link {
+  display: block;
+  padding: 17px 20px 12px;
+  text-align: center;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
