--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -1,18 +1,14 @@
 .video__wrapper {
   position: relative;
-  width: 280px;
-  padding: 17px 20px 0;
-  margin: 0 auto;
+  padding-top: 17px;
   text-align: center;
 
   @media (min-width: $tablet-width) {
-    width: 648px;
-    padding: 58px 60px 0;
+    padding-top: 58px;
   }
 
   @media (min-width: $desktop-width) {
-    width: 800px;
-    padding: 62px 200px 0;
+    padding-top: 62px;
   }
 }
 
