--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,5 +1,11 @@
+.copyright {
+  display: flex;
+  justify-content: center;
+}
+
 .copyright__text {
   margin: 0;
+  padding: 6px 12px 6px 0;
   text-transform: uppercase;
 }
 
@@ -8,5 +14,6 @@
 }
 
 .copyright__link-icon {
+  display: block;
   fill: $black-color;
 }
