--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -5,6 +5,9 @@ $black-color: #000000;
 $advantages-color: #eeeeee;
 $secondary-color: #333333;
 $intro-back-color: #3f5e72;
+$menu-current-color: #766357;
+$hover-color: #669EC0;
+$active-color: #5496BD;
 
 // Viewports
 
