--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -16,12 +16,28 @@
 
   @media (min-width: $tablet-width) {
     padding: 0;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
   }
 }
 
 .gallery__image {
   display: block;
+  width: 100%;
+
+  @media (min-width: $tablet-width) {
+    flex: 0 1 83.333%;
+  }
+}
+
+.gallery__photo-information {
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 210px 74px;
+    padding: 22px 20px 15px;
+    background-color: $input-back-color;
+  }
 }
 
 .gallery__title {
@@ -29,6 +45,10 @@
   padding-top: 15px;
   text-transform: uppercase;
   font-weight: 700;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+  }
 }
 
 .gallery__author {
@@ -39,6 +59,12 @@
   cite {
     font-style: normal;
   }
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
 }
 
 .gallery__button {
@@ -46,9 +72,24 @@
   margin-right: 14px;
   border: none;
   background-color: transparent;
+
+  @media (min-width: $tablet-width) {
+    margin-left: auto;
+    grid-column: 2/3;
+    grid-row: 1/3;
+    order: 2;
+  }
 }
 
 .gallery__button-icon {
   fill: $black-color;
   opacity: 0.3;
+}
+
+.gallery__number-likes {
+  @media (min-width: $tablet-width) {
+    grid-column: 2/3;
+    grid-row: 1/3;
+    order: 1;
+  }
 }
