--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,5 +1,4 @@
 .main-header {
-  position: relative;
   display: flex;
   flex-direction: column;
   background-color: $white-color;
@@ -7,8 +6,11 @@
 }
 
 .main-header__logo {
-  width: 100%;
+  position: absolute;
+  left: 0;
+  right: 0;
   height: 96px;
   text-align: center;
-  margin-bottom: -40px;
+  order: 2;
+  z-index: 1;
 }
