--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -6,8 +6,9 @@
 }
 
 .reviews__description {
-  margin: 0;
-  padding-bottom: 28px;
+  margin: 0 auto;
+  padding: 0 20px 28px;
+  max-width: 435px;
   text-transform: uppercase;
   text-align: center;
 
@@ -21,22 +22,23 @@
 }
 
 .reviews__form {
+  padding: 0 20px;
+
   @media (min-width: $tablet-width) {
     display: grid;
-    grid-template-columns: 324px 324px;
+    grid-template-columns: repeat(2, 50%);
     padding-top: 102px;
   }
 
   @media (min-width: $desktop-width) {
-    grid-template-columns: 493px 466px;
+    grid-template-columns: 51% 49%;
     padding-top: 67px;
   }
 }
 
 .reviews__field-group {
   margin: 0;
-  padding: 0;
-  padding-bottom: 24px;
+  padding: 0 0 24px;
 
   &--row {
     @media (min-width: $tablet-width) {
@@ -56,4 +58,8 @@
   text-transform: uppercase;
   text-align: right;
   color: rgba(51, 51, 51, 0.6);
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1/3;
+  }
 }
