--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -22,17 +22,17 @@
 }
 
 .reviews__form {
-  padding: 0 20px;
+  padding: 0 6%;
 
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: repeat(2, 50%);
-    padding-top: 102px;
+    padding: 102px 8% 0;
   }
 
   @media (min-width: $desktop-width) {
     grid-template-columns: 51% 49%;
-    padding-top: 67px;
+    padding: 67px 10% 0;
   }
 }
 
@@ -48,6 +48,9 @@
 }
 
 .reviews__button {
+  display: block;
+  max-width: 280px;
+  margin: 0 auto;
   padding: 16px 49px;
 }
 
