--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -40,6 +40,14 @@
   margin: 0;
   padding: 0 0 24px;
 
+  @media (min-width: $tablet-width) {
+    padding-bottom: 48px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-bottom: 56px;
+  }
+
   &--row {
     @media (min-width: $tablet-width) {
       grid-column: 1/3;
